manifests/security/gatekeeper/constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowprivilegedcontainers
  annotations:
    description: "Disallow privileged containers"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowPrivilegedContainers
      validation:
        openAPIV3Schema:
          type: object
          properties:
            exemptImages:
              type: array
              items:
                type: string
              description: "List of image patterns to exempt from the policy"
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowprivilegedcontainers

        violation[{"msg": msg}] {
          container := input_containers[_]
          container.securityContext.privileged == true
          not is_exempt(container)
          msg := sprintf("Privileged container is not allowed: %v", [container.name])
        }

        input_containers[c] {
          c := input.review.object.spec.containers[_]
        }

        input_containers[c] {
          c := input.review.object.spec.initContainers[_]
        }

        input_containers[c] {
          c := input.review.object.spec.ephemeralContainers[_]
        }

        is_exempt(container) {
          exempt_images := object.get(input, ["parameters", "exemptImages"], [])
          img := container.image
          exemption := exempt_images[_]
          _matches_exemption(img, exemption)
        }

        _matches_exemption(img, exemption) {
          endswith(exemption, "*")
          prefix := trim_suffix(exemption, "*")
          startswith(img, prefix)
        }

        _matches_exemption(img, exemption) {
          not endswith(exemption, "*")
          img == exemption
        }
